test_files/netlist_cmp/invalid/invalid_case_10_b.net
V1 VEE 0 -9
R1 VEE NB 22k
R2 NB 0 10k
R3 0 NC 1k
Q1 VEE NB NC 0 2N3906
.model PNP PNP
.op
.backanno
.end
